Add Grades to Year
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/FormBundle/Resources/config/services.yml
+++ b/src/Busybee/FormBundle/Resources/config/services.yml
@@ -56,7 +56,7 @@ services:
             - '@file.uploader'
         tags:
             - { name: form.type }
-    form.type.setting:
+    form.type.setting.choice:
         class: Busybee\FormBundle\Type\SettingChoiceType
         arguments:
             - '@setting.manager'
