--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/Line.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/Line.orm.yml
@@ -24,6 +24,7 @@ Busybee\TimeTableBundle\Entity\Line:
         learningGroups:
             targetEntity: Busybee\TimeTableBundle\Entity\LearningGroups
             mappedBy: line
+            orderBy: { name: 'ASC' }
             cascade: [ all ]
     manyToOne:
         timetable:
