End of Work 22nd Apr 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/doctrine/Grade.orm.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/doctrine/Grade.orm.yml
@@ -14,6 +14,10 @@ Busybee\InstituteBundle\Entity\Grade:
         sequence:
             type: integer
             length: 2
+    manyToMany:
+        students:
+            targetEntity: Busybee\StudentBundle\Entity\Student
+            mappedBy: grades
     manyToOne:
         year:
             targetEntity: Busybee\InstituteBundle\Entity\Year
