--- a/src/Busybee/PersonBundle/Resources/config/person/parameters.yml
+++ b/src/Busybee/PersonBundle/Resources/config/person/parameters.yml
@@ -23,10 +23,10 @@ parameters:
             include: BusybeeStudentBundle:Person:immigration.html.twig
             message: immigrationMessage
             translation: BusybeeStudentBundle
-        enrolment:
-            label: person.tab.enrolment
-            include: BusybeeStudentBundle:Person:enrolmentStart.html.twig
-            message: enrolmentMessage
+        grades:
+            label: person.tab.grades
+            include: BusybeeStudentBundle:Person:gradeStart.html.twig
+            message: gradeMessage
             translation: BusybeeStudentBundle
         user:
             label: person.tab.user
