--- a/src/Busybee/StudentBundle/Resources/config/doctrine/Student.orm.yml
+++ b/src/Busybee/StudentBundle/Resources/config/doctrine/Student.orm.yml
@@ -94,6 +94,20 @@ Busybee\StudentBundle\Entity\Student:
         person:
             targetEntity: Busybee\PersonBundle\Entity\Person
             inversedBy: student
+    manyToMany:
+        grades:
+            targetEntity: Busybee\InstituteBundle\Entity\Grade
+            inversedBy: students
+            orderBy: { 'year': 'ASC' }
+            cascade: [ 'persist' ]
+            joinTable:
+                name: student_grade
+                joinColumns:
+                    student_id:
+                        referencedColumnName: id
+                inverseJoinColumns:
+                    grade_id:
+                        referencedColumnName: id
     manyToOne:
         createdBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
