Stop for Lunch 24th Apr 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/doctrine/Grade.orm.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/doctrine/Grade.orm.yml
@@ -14,10 +14,11 @@ Busybee\InstituteBundle\Entity\Grade:
         sequence:
             type: integer
             length: 2
-    manyToMany:
+    oneToMany:
         students:
-            targetEntity: Busybee\StudentBundle\Entity\Student
-            mappedBy: grades
+            targetEntity: Busybee\StudentBundle\Entity\StudentGrade
+            mappedBy: grade
+            cascade: [ 'persist' ]
     manyToOne:
         year:
             targetEntity: Busybee\InstituteBundle\Entity\Year
