End of Day 25th Apr 2017 Added javascript button to button Extension Term in Year Delete Select tab on return.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/calendar/parameters.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/calendar/parameters.yml
@@ -7,7 +7,7 @@ parameters:
             message: yearMessage
         terms:
             label: calendar.tab.terms
-            include: 'BusybeeInstituteBundle:Calendar:terms.html.twig'    
+            include: 'BusybeeInstituteBundle:Term:terms.html.twig'
             message: termMessage
         specialDays:
             label: calendar.tab.specialDays
