--- a/src/Busybee/InstituteBundle/Resources/config/calendar/parameters.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/calendar/parameters.yml
@@ -11,7 +11,7 @@ parameters:
             message: termMessage
         specialDays:
             label: calendar.tab.specialDays
-            include: 'BusybeeInstituteBundle:Calendar:specialDays.html.twig'    
+            include: 'BusybeeInstituteBundle:SpecialDays:specialDays.html.twig'
             message: specialDayMessage
         grades:
             label: calendar.tab.grades
