Activity Management Work
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/StudentBundle/Resources/config/doctrine/Activity.orm.yml
+++ b/src/Busybee/StudentBundle/Resources/config/doctrine/Activity.orm.yml
@@ -40,6 +40,7 @@ Busybee\StudentBundle\Entity\Activity:
     manyToOne:
         year:
             targetEntity: Busybee\InstituteBundle\Entity\Year
+            orderBy: {'firstDay': 'DESC'}
             joinColumns:
                 year:
                     referencedColumnName: id
