--- a/src/Busybee/StudentBundle/Resources/config/routing.yml
+++ b/src/Busybee/StudentBundle/Resources/config/routing.yml
@@ -7,3 +7,6 @@ student_activities:
 student_activity_edit:
     path:     /activity/{id}/edit/{currentSearch}
     defaults: { _controller: BusybeeStudentBundle:Activity:edit, id: 'Add', currentSearch: null }
+student_activity_list:
+    path:     /activity/{id}/list/
+    defaults: { _controller: BusybeeStudentBundle:Activity:studentList }
