--- a/src/Busybee/StudentBundle/Resources/config/services.yml
+++ b/src/Busybee/StudentBundle/Resources/config/services.yml
@@ -5,14 +5,21 @@ parameters:
             Activity Name:
                 a.name: ASC
                 a.nameShort: ASC
+                y.firstDay: DESC
             Grades:
                 a.grades: ASC
                 a.name: ASC
+                y.firstDay: DESC
+            Year:
+                y.firstDay: DESC
+                a.name: ASC
+                a.nameShort: ASC
         limit: '25'
         searchList:
             - a.name
             - a.nameShort
             - a.grades
+            - y.name
         join:
             a.year:
                 alias: y
@@ -22,6 +29,7 @@ parameters:
             - a.nameShort
             - a.id
             - a.grades
+            - y.name as year
 services:
     student.repository:
         class: Busybee\StudentBundle\Repository\StudentRepository
