End of Day 29th April 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/LearningGroups.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/LearningGroups.orm.yml
@@ -23,6 +23,11 @@ Busybee\TimeTableBundle\Entity\LearningGroups:
         nameShort:
             type: string
             length: '5'
+        participants:
+            type: integer
+            length: 4
+        includeAll:
+            type: boolean
         lastModified:
             type: datetime
         createdOn:
