End of Day 30th April 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/services.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/services.yml
@@ -94,3 +94,5 @@ services:
         class: Busybee\TimeTableBundle\Model\LearningGroupsManager
         arguments:
             - '@doctrine.orm.entity_manager'
+            - '@translator'
+
