End of Day 1st May 2017 Added Small popup css / template Pagination can now capture limit on transfer if route allows Removed Student Status / Now in Student Grade information Added limit to person mange/edit routes Added Locker to Student Test for duplicate students in Learning Groups
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/config/routing.yml
+++ b/src/Busybee/PersonBundle/Resources/config/routing.yml
@@ -1,9 +1,9 @@
 person_manage:
-    path:     /manage/{currentSearch}
-    defaults: { _controller: BusybeePersonBundle:Person:index, currentSearch: null }
+    path:     /manage/{limit}/{currentSearch}
+    defaults: { _controller: BusybeePersonBundle:Person:index, currentSearch: null, limit: 10 }
 person_edit:
-    path:     /{id}/edit/{currentSearch}
-    defaults: { _controller: BusybeePersonBundle:Person:edit, currentSearch: null }
+    path:     /{id}/edit/{limit}/{currentSearch}
+    defaults: { _controller: BusybeePersonBundle:Person:edit, id: 'Add', currentSearch: null, limit: 10 }
 address_check:
     path:     /address/
     defaults: { _controller: BusybeePersonBundle:Address:check }
