Pagination Choice Refinenment
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PaginationBundle/Resources/config/services.yml
+++ b/src/Busybee/PaginationBundle/Resources/config/services.yml
@@ -1,2 +1,8 @@
 services:
+    pagination.Type:
+        class: Busybee\PaginationBundle\Form\PaginationType
+        arguments:
+            - '@router'
+        tags:
+            - { name: form.type }
 
